// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/Movie should render Movie correctly with poster image 1`] = `
<div>
  <div
    class="wrapper"
    id="123456"
  >
    <div
      class="movie"
    >
      <img
        alt="The Movie"
        class="movie__poster"
        src="http://image.tmdb.org/t/p/w154/poster.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/Movie should render Movie correctly without poster image 1`] = `
<div>
  <div
    class="wrapper"
    id="123456"
  >
    <div
      class="movie"
    >
      <div
        class="movie__poster movie__poster--missing"
      >
        <span
          class="material-icons"
        >
          photo_camera
        </span>
        <h2>
          The Movie
        </h2>
      </div>
    </div>
  </div>
</div>
`;
